--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,27 @@ p {
 }
 
 
+
+@media only screen and (max-width: 990px) {
+
+    .bottom-border {
+        border-bottom: 1px solid white;
+    }
+    .right-border {
+        border: 0;
+    }
+    .palmier {
+        display: none;
+    }
+    .article {
+        padding-bottom: 50px;
+    }
+    h1 {
+        padding: 150px 0;
+    }
+
+}
+
 @media only screen and (max-width: 762px) {
     .menu-bar {
         display: none;
@@ -117,30 +138,12 @@ p {
         font-size: 14px;
     }
     .how-we-met {
-        padding: 50px 0 0 0;
+        padding: 60px 0 0 0;
     }
     .the-proposal {
         padding: 25px 0 0 0;
     }
     h1 {
-        padding: 100px 0;
+        padding: 80px 0;
     }
 }
-
-@media only screen and (max-width: 990px) {
-
-    .bottom-border {
-        border-bottom: 1px solid white;
-    }
-    .right-border {
-        border: 0;
-    }
-    .palmier {
-        display: none;
-    }
-    .article {
-        padding-bottom: 50px;
-    }
-
-}
-
